--- a/package.json
+++ b/package.json
@@ -2,6 +2,27 @@
   "name": "test-with-redux",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "---------- DEVELOPMENT ---------------------------------------------------------------------------------": "",
+    "------RUN-FRONT-BACK-TOGATHER-CMDs------": "",
+    "dev": "concurrently \"yarn start:api:dev\" \"yarn start:frontend:dev\"",
+    "start": "npx serve -s build",
+    "------ALL-DEVELOPMENT-CMDs------": "",
+    "start:frontend:dev": "env-cmd -e local_start -r env-cmd.js react-scripts start",
+    "start:api:dev": "yarn --cwd backend run start:dev",
+    "------ALL-BUILDs-CMDs------": "",
+    "build": "react-scripts build",
+    "build:recette": "env-cmd -e recette -r env-cmd.js yarn build",
+    "build:staging": "env-cmd -e staging -r env-cmd.js yarn build",
+    "build:production": "env-cmd -e production -r env-cmd.js yarn build",
+    "------ALL-LINTING-CMDs------": "",
+    "lint:eslint": "yarn lint",
+    "lint:ts": "yarn typecheck",
+    "lint": "yarn eslint src/**/*.ts src/**/*.tsx",
+    "typecheck": "tsc --noEmit",
+    "------ALL-FORMATTING-CMDs------": "",
+    "format": "prettier --write '**/**.{js,jsx,ts,tsx,json,css,md,html}'"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -12,6 +33,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@formatjs/intl-displaynames": "^4.0.5",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "4.0.0-alpha.12",
+    "@sentry/react": "^5.29.2",
+    "@sentry/tracing": "^5.29.2",
+    "@types/styled-components": "^5.1.7",
+    "@types/uuid": "^8.3.0",
+    "@types/yup": "0.29.11",
+    "@xstate/react": "^1.2.2",
     "axios": "0.19.2",
     "classnames": "2.2.6",
     "clsx": "1.1.1",
@@ -35,7 +65,30 @@
     "sjs-base-model": "1.9.0",
     "typescript": "^4.1.2",
     "uuid": "7.0.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "awesome-phonenumber": "^2.46.0",
+    "concurrently": "^5.3.0",
+    "date-fns": "^2.17.0",
+    "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
+    "formik": "^2.2.6",
+    "react-intl": "^5.10.14",
+    "react-query": "^3.5.16",
+    "styled-components": "^5.2.1",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-broadcast-update": "^5.1.3",
+    "workbox-cacheable-response": "^5.1.3",
+    "workbox-core": "^5.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-google-analytics": "^5.1.3",
+    "workbox-navigation-preload": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-range-requests": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
+    "workbox-streams": "^5.1.3",
+    "xstate": "^4.16.0",
+    "yup": "0.32.8"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
@@ -54,6 +107,10 @@
     "@types/uuid": "7.0.0",
     "@typescript-eslint/eslint-plugin": "2.21.0",
     "@typescript-eslint/parser": "2.21.0",
+    "@cypress/code-coverage": "^3.9.0",
+    "@testing-library/cypress": "^7.0.3",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
     "cross-env": "7.0.0",
     "eslint": "7.11.0",
     "eslint-config-prettier": "6.10.0",
@@ -68,24 +125,27 @@
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1",
     "react-scripts": "3.4.0",
-    "redux-mock-store": "1.5.4"
+    "redux-mock-store": "1.5.4",
+    "cypress": "^6.2.1",
+    "eslint-plugin-cypress": "2.11.2",
+    "lint-staged": "^10.5.3",
+    "react-test-renderer": "^17.0.1",
+    "swagger-typescript-api": "4.0.4"
   },
-  "scripts": {
-    "---------- HELPERS -------------------------------------------------------------------------------------": "",
-    "generate": "node ./tools/generate.js",
-    "---------- DEVELOPMENT ---------------------------------------------------------------------------------": "",
-    "start": "cross-env CLIENT_ENV=development craco start",
-    "prod": "cross-env CLIENT_ENV=production craco start",
-    "---------- PRODUCTION ----------------------------------------------------------------------------------": "",
-    "build": "cross-env CLIENT_ENV=production craco build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "---------- TESTING -------------------------------------------------------------------------------------": "",
-    "test": "cross-env CLIENT_ENV=test craco test",
-    "ts": "tsc --noEmit",
-    "ts:watch": "npm run ts -- --watch",
-    "lint": "eslint 'src/**/*.{js,ts,tsx}' --fix",
-    "--------------------------------------------------------------------------------------------------------": ""
+  "resolutions": {
+    "react-scripts/eslint-webpack-plugin": "2.3.0"
+  },
+  "jest": {
+    "resetMocks": false
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "yarn eslint --cache --fix",
+    "*.{js,jsx,ts,tsx,json,css,md,html}": "pretty-quick --staged --pattern '**/*.*(js|jsx|ts|tsx|json|css|md|html)'"
   },
   "eslintConfig": {
     "extends": [
