--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "format": "prettier --write '**/**.{js,jsx,ts,tsx,json,css,md,html}'"
   },
   "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@formatjs/intl-displaynames": "^4.0.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "3.2.10",
+    "@sentry/react": "^5.29.2",
+    "@sentry/tracing": "^5.29.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -33,25 +39,29 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@formatjs/intl-displaynames": "^4.0.5",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/pickers": "4.0.0-alpha.12",
-    "@sentry/react": "^5.29.2",
-    "@sentry/tracing": "^5.29.2",
     "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "@types/yup": "0.29.11",
     "@xstate/react": "^1.2.2",
+    "awesome-phonenumber": "^2.46.0",
     "axios": "0.19.2",
     "classnames": "2.2.6",
     "clsx": "1.1.1",
+    "concurrently": "^5.3.0",
     "connected-react-router": "6.7.0",
+    "date-fns": "2.18.0",
     "dayjs": "1.8.21",
+    "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
+    "formik": "^2.2.6",
     "history": "4.10.1",
     "lodash.groupby": "4.6.0",
     "react": "^17.0.1",
     "react-app-polyfill": "1.0.6",
+    "react-cool-tabs": "1.1.6",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.14",
+    "react-query": "3.12.0",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "4.0.2",
@@ -63,18 +73,10 @@
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.2",
     "sjs-base-model": "1.9.0",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuid": "7.0.1",
     "web-vitals": "^1.0.1",
-    "awesome-phonenumber": "^2.46.0",
-    "concurrently": "^5.3.0",
-    "date-fns": "^2.17.0",
-    "dotenv": "^8.2.0",
-    "env-cmd": "^10.1.0",
-    "formik": "^2.2.6",
-    "react-intl": "^5.10.14",
-    "react-query": "^3.5.16",
-    "styled-components": "^5.2.1",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
@@ -94,6 +96,10 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
     "@babel/plugin-proposal-optional-chaining": "7.8.3",
     "@craco/craco": "5.6.3",
+    "@cypress/code-coverage": "^3.9.0",
+    "@testing-library/cypress": "^7.0.3",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
     "@types/classnames": "2.2.9",
     "@types/history": "4.7.5",
     "@types/jest": "25.1.3",
@@ -107,29 +113,25 @@
     "@types/uuid": "7.0.0",
     "@typescript-eslint/eslint-plugin": "2.21.0",
     "@typescript-eslint/parser": "2.21.0",
-    "@cypress/code-coverage": "^3.9.0",
-    "@testing-library/cypress": "^7.0.3",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
     "cross-env": "7.0.0",
+    "cypress": "^6.2.1",
     "eslint": "7.11.0",
     "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-cypress": "2.11.2",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.3",
     "eslint-plugin-react-hooks": "2.5.0",
     "generate-template-files": "2.2.1",
     "gh-pages": "2.2.0",
     "husky": "4.2.3",
+    "lint-staged": "^10.5.3",
     "nock": "12.0.3",
     "node-sass": "4.13.1",
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1",
     "react-scripts": "3.4.0",
-    "redux-mock-store": "1.5.4",
-    "cypress": "^6.2.1",
-    "eslint-plugin-cypress": "2.11.2",
-    "lint-staged": "^10.5.3",
     "react-test-renderer": "^17.0.1",
+    "redux-mock-store": "1.5.4",
     "swagger-typescript-api": "4.0.4"
   },
   "resolutions": {
