--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@date-io/date-fns": "1.x",
     "@formatjs/intl-displaynames": "^4.0.5",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "4.0.0-alpha.22",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "3.2.10",
