--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "start:api:dev": "yarn --cwd backend run start:dev",
     "------ALL-BUILDs-CMDs------": "",
     "build": "react-scripts build",
-    "build:recette": "env-cmd -e recette -r env-cmd.js yarn build",
-    "build:staging": "env-cmd -e staging -r env-cmd.js yarn build",
-    "build:production": "env-cmd -e production -r env-cmd.js yarn build",
     "------ALL-LINTING-CMDs------": "",
     "lint:eslint": "yarn lint",
     "lint:ts": "yarn typecheck",
@@ -25,14 +22,11 @@
   },
   "dependencies": {
     "@date-io/date-fns": "1.x",
-    "@formatjs/intl-displaynames": "^4.0.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/data-grid": "4.0.0-alpha.22",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "3.2.10",
-    "@sentry/react": "^5.29.2",
-    "@sentry/tracing": "^5.29.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -40,28 +34,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
-    "@types/yup": "0.29.11",
-    "@xstate/react": "^1.2.2",
-    "awesome-phonenumber": "^2.46.0",
-    "axios": "0.19.2",
     "classnames": "2.2.6",
-    "clsx": "1.1.1",
     "concurrently": "^5.3.0",
     "connected-react-router": "6.7.0",
     "date-fns": "2.18.0",
     "dayjs": "1.8.21",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
-    "formik": "^2.2.6",
     "history": "4.10.1",
-    "lodash.groupby": "4.6.0",
     "react": "^17.0.1",
     "react-app-polyfill": "1.0.6",
     "react-cool-tabs": "1.1.6",
     "react-dom": "^17.0.1",
-    "react-intl": "^5.10.14",
     "react-query": "3.12.0",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
@@ -70,28 +55,12 @@
     "redux-devtools-extension": "2.13.8",
     "redux-freeze": "0.1.7",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.2",
     "sjs-base-model": "1.9.0",
-    "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuid": "7.0.1",
-    "web-vitals": "^1.0.1",
-    "workbox-background-sync": "^5.1.3",
-    "workbox-broadcast-update": "^5.1.3",
-    "workbox-cacheable-response": "^5.1.3",
-    "workbox-core": "^5.1.3",
-    "workbox-expiration": "^5.1.3",
-    "workbox-google-analytics": "^5.1.3",
-    "workbox-navigation-preload": "^5.1.3",
-    "workbox-precaching": "^5.1.3",
-    "workbox-range-requests": "^5.1.3",
-    "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3",
-    "xstate": "^4.16.0",
-    "yup": "0.32.8"
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
@@ -104,7 +73,6 @@
     "@types/classnames": "2.2.9",
     "@types/history": "4.7.5",
     "@types/jest": "25.1.3",
-    "@types/lodash.groupby": "4.6.6",
     "@types/node": "13.7.7",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
@@ -115,7 +83,6 @@
     "@typescript-eslint/eslint-plugin": "2.21.0",
     "@typescript-eslint/parser": "2.21.0",
     "cross-env": "7.0.0",
-    "cypress": "^6.2.1",
     "eslint": "7.11.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-cypress": "2.11.2",
@@ -132,8 +99,7 @@
     "pretty-quick": "2.0.1",
     "react-scripts": "3.4.0",
     "react-test-renderer": "^17.0.1",
-    "redux-mock-store": "1.5.4",
-    "swagger-typescript-api": "4.0.4"
+    "redux-mock-store": "1.5.4"
   },
   "resolutions": {
     "react-scripts/eslint-webpack-plugin": "2.3.0"
